# mcp-servers

./: .gitignore  session-ses_3f92.md
coding_convention_mcp_server/: .env.example  .gitignore  README.md  SETUP.md  claude_desktop_config.json  opencode.jsonc.example  pyproject.toml  setup_server.py
coding_convention_mcp_server/src/coding_convention_mcp_server/: __init__.py  analyzer.py  config.py  models.py  server.py  storage.py
telegram_mcp_server/: .env.example  .gitignore  Dockerfile  README.md  SETUP.md  claude_desktop_config.json  docker-compose.yml  pyproject.toml  set_commands.py  setup.sh  telegram-mcp-polling@.service  test_polling_import.py  test_server_modifications.py
telegram_mcp_server/.github/workflows/: lint.yml  test.yml
telegram_mcp_server/config/: controller.example.yaml  dual_bot.yaml
telegram_mcp_server/opencode-plugins/: telegram-watcher.ts
telegram_mcp_server/src/telegram_bridge/: __init__.py  bridge_service.py  command_handler.py  opencode_client.py
telegram_mcp_server/src/telegram_controller/: __init__.py  config_schema.py  controller.py  instance.py  multi_bot_manager.py  notifications.py  pid_manager.py  port_allocator.py  process_manager.py  project_detector.py  session_router.py
telegram_mcp_server/src/telegram_controller/handlers/: __init__.py  callbacks.py  commands.py  messages.py
telegram_mcp_server/src/telegram_controller/instance_factories/: __init__.py  base.py  opencode_factory.py  quantcode_factory.py  registry.py
telegram_mcp_server/src/telegram_mcp_server/: __init__.py  commands.py  config.py  errors.py  server.py  server.py.backup  telegram_client.py  validation.py
telegram_mcp_server/src/telegram_polling_service/: __init__.py  polling_service.py
telegram_mcp_server/telegram_polling_service/: __init__.py  polling_service.py
telegram_mcp_server/tests/: __init__.py  conftest.py  test_telegram_controller_utils.py  test_validation.py
