[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "coding-convention-mcp-server"
version = "0.1.0"
description = "MCP server for tracking, comparing, and validating coding conventions"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "coding-convention-mcp-server contributors" }
]
keywords = ["mcp", "coding", "convention", "style", "analysis", "lint"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "black>=24.0.0",
]

[project.scripts]
coding-convention-mcp-server = "coding_convention_mcp_server:main"

[project.urls]
Homepage = "https://github.com/your-org/coding-convention-mcp-server"
Repository = "https://github.com/your-org/coding-convention-mcp-server"
Issues = "https://github.com/your-org/coding-convention-mcp-server/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/coding_convention_mcp_server"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]