[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "telegram-mcp-server"
version = "0.1.0"
description = "MCP server for Telegram Bot API integration"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Your Name", email = "your@email.com" }
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
telegram-mcp-server = "telegram_mcp_server.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/telegram_mcp_server"]
